--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,26 @@
 ################################################################################
 
 /packages/Antlr.3.4.1.9004/lib
+/packages/AspNet.ScriptManager.bootstrap.3.0.0/lib
+/packages/AspNet.ScriptManager.jQuery.1.10.2/lib/net40
+/packages/AspNet.ScriptManager.jQuery.1.10.2/lib/net45
+/packages/EntityFramework.6.1.3/lib
+/packages/EntityFramework.6.1.3/tools
+/packages/Microsoft.ApplicationInsights.2.0.0/lib
+/packages/Microsoft.ApplicationInsights.Agent.Intercept.1.2.1/lib
+/packages/Microsoft.AspNet.FriendlyUrls.Core.1.0.2/lib
+/packages/Microsoft.AspNet.Identity.Core.2.2.1/lib/net45
+/packages/Microsoft.AspNet.Identity.Owin.2.2.1/lib/net45
+/packages/Microsoft.AspNet.Providers.Core.2.0.0/lib/net40
+/packages/Microsoft.Net.Compilers.1.0.0/tools
+/packages/Microsoft.Owin.3.0.1/lib/net45
+/packages/Microsoft.Owin.Host.SystemWeb.3.0.1/lib/net45
+/packages/Microsoft.Owin.Security.3.0.1/lib/net45
+/packages/Microsoft.Owin.Security.Cookies.3.0.1/lib/net45
+/packages/Microsoft.Owin.Security.Facebook.3.0.1/lib/net45
+/packages/Microsoft.Owin.Security.Google.3.0.1/lib/net45
+/packages/Microsoft.AspNet.Web.Optimization.1.1.3/lib/net40
+/packages
+/WebsiteMau/bin/roslyn
+/WebsiteMau/bin
+/WebsiteMau/obj/Debug
